# Waken-Agent

./: .env.example  .gitignore  .prettierignore  .prettierrc  00-项目总览.md  01-项目初始化.md  02-AI核心-单Agent运行时.md  03-记忆与知识系统.md  04-多Agent编排.md  05-API网关.md  06-Web管理后台.md  07-移动端App.md  08-集成联调与打磨.md  CLAUDE.md  LICENSE  commitlint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/ai-core/: package.json  pyproject.toml  requirements.txt
apps/ai-core/app/: config.py  main.py
apps/ai-core/app/api/routes/: agent.py
apps/ai-core/app/core/agent/: __init__.py  loop.py
apps/ai-core/app/core/llm/: base.py  openai_llm.py  router.py
apps/ai-core/app/core/memory/: short_term.py
apps/ai-core/app/core/tools/: __init__.py  code_exec.py  file_io.py  registry.py  web_search.py
apps/ai-core/app/models/: schemas.py
apps/ai-core/app/services/: agent_service.py
apps/api/: package.json  tsconfig.json
apps/mobile/: package.json  tsconfig.json
apps/web/: package.json  tsconfig.json
docker/: docker-compose.yml
docker/postgres/: init.sql
