[project]
name = "waken-agent-ai-core"
version = "0.0.1"
description = "Waken-Agent AI Core — Agent runtime, tool system, memory"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
